blocks/issues: spacing headings and green button background issue
closes #364 closes #365 closes #368

--- a/digitalstrategie/assets/scss/components/_ds-block.scss
+++ b/digitalstrategie/assets/scss/components/_ds-block.scss
@@ -27,6 +27,7 @@
         h3,
         h3:after,
         h4 {
+            background-color: $green !important;
             color: $body-bg !important;
             border-color: $body-bg;
             border-width: 1px;
@@ -74,3 +75,8 @@
 .quote-ds-block__text {
     font-weight: $font-weight-bold;
 }
+
+.modul-teaser-marketing.imageteaser .image {
+    z-index: 5;
+}
+
